--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div>
                         </li>
                         <li class="header--nav__item">
-                            <a href="">STORE</a>
+                            <a href="store.html">STORE</a>
                         </li>
                     </ul>
                 </div>
