--- a/women.html
+++ b/women.html
@@ -38,7 +38,7 @@
                         </div>
                     </li>
                     <li class="header--nav__item">
-                        <a href="">STORE</a>
+                        <a href="store.html">STORE</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
                             <a href="about.html">ABOUT</a>
                         </li>
                         <li class="header--nav__item">
-                            <a class="dropbtn-float">FRAGRANCE
+                            <a class="dropbtn-float active__float">FRAGRANCE
                             </a>
                             <div class="dropdown-content__float">
                                 <a href="women.html">WOMEN</a>
@@ -67,7 +67,7 @@
                             </div>
                         </li>
                         <li class="header--nav__item">
-                            <a href="">STORE</a>
+                            <a href="store.html">STORE</a>
                         </li>
                     </ul>
                 </div>
