--- a/women.html
+++ b/women.html
@@ -98,7 +98,7 @@
                             <div class="card__price-box">
                                 <p class="card__price-value">&yen; 8,400</p>
                             </div>
-                            <a href="store.html" class="btn btn--white">詳細をみる</a>
+                            <a href="item-women.html" class="btn btn--white">詳細をみる</a>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                             <div class="card__price-box">
                                 <p class="card__price-value">&yen; 7,200</p>
                             </div>
-                            <a href="store.html" class="btn btn--white">詳細をみる</a>
+                            <a href="item-women.html" class="btn btn--white">詳細をみる</a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                             <div class="card__price-box">
                                 <p class="card__price-value">&yen; 7,000</p>
                             </div>
-                            <a href="" class="btn btn--white">詳細をみる</a>
+                            <a href="item-women.html" class="btn btn--white">詳細をみる</a>
                         </div>
                     </div>
                 </div>
