--- a/men.html
+++ b/men.html
@@ -86,6 +86,27 @@
             <div class="product--list__item">
                 <div class="card">
                     <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--6">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--6">BLEU MER</span>
+                        </h4>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-6">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-value">&yen; 7,000</p>
+                            </div>
+                            <a href="item-men.html" class="btn btn--white">詳細をみる</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="product--list__item">
+                <div class="card">
+                    <div class="card__side card__side--front">
                         <div class="card__picture card__picture--4">
                             &nbsp;
                         </div>
@@ -98,7 +119,7 @@
                             <div class="card__price-box">
                                 <p class="card__price-value">&yen; 8,400</p>
                             </div>
-                            <a href="store.html" class="btn btn--white">詳細をみる</a>
+                            <a href="item-men.html" class="btn btn--white">詳細をみる</a>
                         </div>
                     </div>
                 </div>
@@ -119,28 +140,7 @@
                             <div class="card__price-box">
                                 <p class="card__price-value">&yen; 9,300</p>
                             </div>
-                            <a href="" class="btn btn--white">詳細をみる</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product--list__item">
-                <div class="card">
-                    <div class="card__side card__side--front">
-                        <div class="card__picture card__picture--6">
-                            &nbsp;
-                        </div>
-                        <h4 class="card__heading">
-                            <span class="card__heading-span card__heading-span--6">BLEU MER</span>
-                        </h4>
-                    </div>
-                    <div class="card__side card__side--back card__side--back-6">
-                        <div class="card__cta">
-                            <div class="card__price-box">
-                                <p class="card__price-value">&yen; 7,000</p>
-                            </div>
-                            <a href="" class="btn btn--white">詳細をみる</a>
+                            <a href="item-men.html" class="btn btn--white">詳細をみる</a>
                         </div>
                     </div>
                 </div>
