--- a/about.html
+++ b/about.html
@@ -80,10 +80,10 @@
             <div class="about--moderne__title">
                 <h2>ABOUT</h2>
             </div>
-            <div class="about--moderne__image">
-                <img src="./images/about1.jpg" alt="">
+            <div class="about--moderne__image wow fadeIn">
+                <img src="./images/about1.jpg" alt="モデルンアバウト">
             </div>
-            <div class="about--moderne__subtitle">
+            <div class="about--moderne__subtitle wow fadeIn">
                 <h2>フレグランス＝創造</h2>
                 <p>
                     フレグランスとは、創造、そして心の奥を映しだすものです。イメージされ、丁寧に仕立てられることで、絶えず変化する欲求に応える。それはまるで、唯一無二のストーリーなのです。
@@ -93,39 +93,39 @@
 
         <section class="moderne--features">
             <div class="moderne--features__container">
-                <div class="feature--first__explanation">
+                <div class="feature--first__explanation wow fadeIn">
                     <h3>A tailored one</h3>
                     <p>
                         フレグランスは、衣服のように、身体に心地よくフィットし、身にまとうもの。色や素材があり、季節に合わせて選ぶことができるのです。
                     </p>
                 </div>
-                <div class="feature--first__image">
+                <div class="feature--first__image wow fadeIn">
                     <img src="./images/about2.jpg" alt="フィット">
                 </div>
                 
-                <div class="feature--second__image">
+                <div class="feature--second__image wow fadeIn">
                     <img src="./images/about3.jpg" alt="本質">
                 </div>
-                <div class="feature--second__explanation">
+                <div class="feature--second__explanation wow fadeIn">
                     <h3>An inner side</h3>
                     <p>
                         フレグランスは、あなたの本質、内面、あなたのありのままを表します。
                     </p>
                 </div>
                 
-                <div class="feature--third__explanation">
+                <div class="feature--third__explanation wow fadeIn">
                     <h3>A Personality</h3>
                     <p>
                         フレグランスは、あなたの存在感を与えます。それをまとうことで、あなたの個性を更に輝かせることができます。
                     </p>
                 </div>
-                <div class="feature--third__image">
+                <div class="feature--third__image wow fadeIn">
                     <img src="./images/about4.jpg" alt="個性">
                 </div>
             </div>
         </section>
 
-        <section class="text--outlined">
+        <section class="text--outlined wow slideInLeft">
             <h2>#MODERNE</h2>
         </section>
     </main>
@@ -152,6 +152,9 @@
 
     <script src="./js/shared.js"></script>
     <script src="./js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
