--- a/item-men.html
+++ b/item-men.html
@@ -117,15 +117,15 @@
     <main class="main">
         <section class="item--visual">
             <div class="item--visual__box">
-                <h1 class="item--title">
+                <h1 class="item--title wow fadeIn">
                     BLEU MER
                 </h1>
-                <div>&yen; 7,000 (税込)</div>
-                <a class="btn btn--white purchase">購入する</a>
+                <div class="wow fadeIn">&yen; 7,000 (税込)</div>
+                <a class="btn btn--white purchase wow fadeIn">購入する</a>
             </div>
         </section>
 
-        <section class="item--intro">
+        <section class="item--intro wow fadeIn">
             <div class="intro--image">
                 <img src="./images/men-item-intro.jpg" alt="ブルーメルモデル">
             </div>
@@ -139,7 +139,7 @@
         </section>
 
         <section class="item--notes">
-            <div class="item--notes__top">
+            <div class="item--notes__top wow fadeIn">
                 <div class="notes--ingredients">
                     <div class="notes--images">
                         <img src="./images/blue mer/top1.jpg" alt="トップ1">
@@ -157,7 +157,7 @@
                 </div>
             </div>
 
-            <div class="item--notes__middle">
+            <div class="item--notes__middle wow fadeIn">
                 <div class="notes--ingredients">
                     <div class="notes--images">
                         <img src="./images/blue mer/middle1.jpg" alt="ミドル1">
@@ -175,7 +175,7 @@
                 </div>
             </div>
 
-            <div class="item--notes__base">
+            <div class="item--notes__base wow fadeIn">
                 <div class="notes--ingredients">
                     <div class="notes--images">
                         <img src="./images/blue mer/base1.jpg" alt="ベース1">
@@ -196,31 +196,31 @@
             </div>
         </section>
 
-        <section class="item--features">
+        <section class="item--features wow fadeIn">
             <div class="item--features__container">
-                <div class="feature--first__image">
+                <div class="feature--first__image wow fadeIn">
                     <img src="./images/men-item-grid1.jpg" alt="ブルーメル1">
                 </div>
-                <div class="feature--first__explanation">
+                <div class="feature--first__explanation wow fadeIn">
                     <p>
                         ブルーのボトルに入った、時代を超越した香り。ブルーメル・オードパルファンは、強い意志のある洗練されたエレガンスを映し出します。
                     </p>
                 </div>
                 
-                <div class="feature--second__explanation">
+                <div class="feature--second__explanation wow fadeIn">
                     <p>
                         ブルーメル・オードパルファンは、センシュアルなアンバーと柔らかなムスクが合わさったエレガントな アロマティックウッディフレグランス。
                         温かみがあり包み込まれるようなコンポジション。
                     </p>
                 </div>
-                <div class="feature--second__image">
+                <div class="feature--second__image wow fadeIn">
                     <img src="./images/men-item-grid2.jpg" alt="ブルーメル2">
                 </div>
                 
-                <div class="feature--third__image">
+                <div class="feature--third__image wow fadeIn">
                     <img src="./images/men-item-grid3.jpg" alt="ブルーメル3">
                 </div>
-                <div class="feature--third__explanation">
+                <div class="feature--third__explanation wow fadeIn">
                     <p>
                         ブルーメル・オードパルファンは、既成概念にとらわれず自由に生きる、男性のエスプリを表現したフレグランスです。
                     </p>
