--- a/item-women.html
+++ b/item-women.html
@@ -117,15 +117,15 @@
     <main class="main">
         <section class="item--visual">
             <div class="item--visual__box">
-                <h1 class="item--title">
+                <h1 class="item--title wow fadeIn">
                     ROSEANNE
                 </h1>
-                <div>&yen; 8,400 (税込)</div>
-                <a class="btn btn--black purchase">購入する</a>
+                <div class="wow fadeIn">&yen; 8,400 (税込)</div>
+                <a class="btn btn--black purchase wow fadeIn">購入する</a>
             </div>
         </section>
 
-        <section class="item--intro">
+        <section class="item--intro wow fadeIn">
             <div class="intro--image">
                 <img src="./images/women-item-intro.jpg" alt="ロザンヌモデル">
             </div>
@@ -139,7 +139,7 @@
         </section>
 
         <section class="item--notes">
-            <div class="item--notes__top">
+            <div class="item--notes__top wow fadeIn">
                 <div class="notes--ingredients">
                     <div class="notes--images">
                         <img src="./images/roseanne/top1.jpg" alt="トップ1">
@@ -154,7 +154,7 @@
                 </div>
             </div>
 
-            <div class="item--notes__middle">
+            <div class="item--notes__middle wow fadeIn">
                 <div class="notes--ingredients">
                     <div class="notes--images">
                         <img src="./images/roseanne/middle1.jpg" alt="ミドル1">
@@ -172,7 +172,7 @@
                 </div>
             </div>
 
-            <div class="item--notes__base">
+            <div class="item--notes__base wow fadeIn">
                 <div class="notes--ingredients">
                     <div class="notes--images">
                         <img src="./images/roseanne/base1.jpg" alt="ベース1">
@@ -188,30 +188,30 @@
             </div>
         </section>
 
-        <section class="item--features">
+        <section class="item--features wow fadeIn">
             <div class="item--features__container">
-                <div class="feature--first__image">
+                <div class="feature--first__image wow fadeIn">
                     <img src="./images/women-item-grid1.jpg" alt="ロザンヌ1">
                 </div>
-                <div class="feature--first__explanation">
+                <div class="feature--first__explanation wow fadeIn">
                     <p>
                         カラブリアンベルガモットがトップノートに。ミドルノートでは、優美なピオニーとダマスクローズのアコード。ベースノートは、レース織のように繊細なホワイトムスクで飾られました。
                     </p>
                 </div>
                 
-                <div class="feature--second__explanation">
+                <div class="feature--second__explanation wow fadeIn">
                     <p>
                         まるでオーラのように自然に存在し、やさしく包まれるようなやわらかく、エレガントな香り。
                     </p>
                 </div>
-                <div class="feature--second__image">
+                <div class="feature--second__image wow fadeIn">
                     <img src="./images/women-item-grid2.jpg" alt="ロザンヌ2">
                 </div>
                 
-                <div class="feature--third__image">
+                <div class="feature--third__image wow fadeIn">
                     <img src="./images/women-item-grid3.jpg" alt="ロザンヌ3">
                 </div>
-                <div class="feature--third__explanation">
+                <div class="feature--third__explanation wow fadeIn">
                     <p>
                         より優美で、華やかなチャンス。 繊細で女性らしく、包み込まれるような香り。あたらしいチャンスは、あなたのもの。
                     </p>
