--- a/women.html
+++ b/women.html
@@ -83,7 +83,7 @@
         </section>
 
         <section>
-            <div class="product--list__item">
+            <div class="product--list__item wow fadeIn">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--1">
@@ -104,7 +104,7 @@
                 </div>
             </div>
 
-            <div class="product--list__item">
+            <div class="product--list__item wow fadeIn">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--2">
@@ -125,7 +125,7 @@
                 </div>
             </div>
 
-            <div class="product--list__item">
+            <div class="product--list__item wow fadeIn">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--3">
