--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
             </div>
         </section>
 
-        <section class="text--outlined wow slideInLeft">
+        <section class="text--outlined wow pulse">
             <h2>#MODERNE</h2>
         </section>
     </main>
